# social-campagin

./: .env.example  .gitignore  README.md  campaign_brief_example.json  pyproject.toml
.claude/: settings.json
scripts/: create_logo.py
src/social_campaign/: __init__.py  cli.py  models.py  pipeline.py
src/social_campaign/agents/: __init__.py  background_generator.py  background_planner.py  brand_checker.py  brief_parser.py  compositor.py  copy_writer.py  image_generator.py  legal_checker.py  localizer.py  reporter.py
src/social_campaign/utils/: hf_client.py  image_client.py  image_utils.py  llm_utils.py  openai_image_client.py
templates/: report.html.j2
tests/: conftest.py  test_brand_checker.py  test_brief_parser.py  test_compositor.py  test_copy_writer.py  test_hf_client.py  test_image_client.py  test_image_generator.py  test_image_utils.py  test_legal_checker.py  test_localizer.py  test_models.py  test_openai_image_client.py  test_pipeline.py  test_reporter.py
